[project]
name = "emap-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "keras==2.11.0",
    "matplotlib==3.7.1",
    "numpy==1.24.2",
    "nvidia-cudnn-cu11==8.9.7.29",
    "pandas==1.5.3",
    "pyswarms==1.3.0",
    "scikit-learn==1.2.1",
    "scipy==1.10.1",
    "tensorflow==2.11.0",
    "gplearn>=0.4.2",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
]
[tool.uv.sources]
nvidia-cudnn-cu11 = { url = "https://pypi.nvidia.com/nvidia-cudnn-cu11/nvidia_cudnn_cu11-8.9.7.29-py3-none-manylinux1_x86_64.whl" }

